--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
-    "expo": "~54.0.22",
-    "expo-asset": "~12.0.9",
-    "expo-gl": "~16.0.7",
-    "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-web": "^0.21.0",
-    "three": "^0.181.0"
+    "@expo/metro-runtime": "~4.0.1",
+    "@react-three/drei": "^9.0.0",
+    "@react-three/fiber": "^8.15.0",
+    "expo": "~52.0.0",
+    "expo-asset": "~11.0.5",
+    "expo-gl": "~15.0.5",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.9",
+    "react-native-web": "~0.19.13",
+    "three": "^0.160.0"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
-    "@types/three": "^0.181.0",
+    "@types/react": "~18.3.12",
+    "@types/three": "^0.160.0",
     "typescript": "~5.9.2"
   },
   "private": true
