--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "ios:device": "expo run:ios --device"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
@@ -14,6 +15,7 @@
     "@react-three/fiber": "^8.15.0",
     "expo": "~52.0.0",
     "expo-asset": "~11.0.5",
+    "expo-dev-client": "~5.0.20",
     "expo-gl": "~15.0.5",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
