--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-asset": "~12.0.9",
     "expo-gl": "~16.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-three": "^8.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
