--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-filament": "^1.9.0",
     "react-native-web": "^0.21.0",
+    "react-native-worklets-core": "^1.6.2",
     "three": "^0.181.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/plugin-transform-class-properties": "^7.27.1",
+    "@babel/plugin-transform-optional-chaining": "^7.28.5",
+    "@babel/plugin-transform-private-methods": "^7.27.1",
+    "@babel/plugin-transform-template-literals": "^7.27.1",
     "@types/react": "~19.1.0",
     "@types/three": "^0.181.0",
     "typescript": "~5.9.2"
